refactorisation de updateStatut dans TacheService